; ModuleID = '/home/carl/AnghaBench/lz4/lib/extr_lz4frame.c_LZ4F_compressBlock.c'
source_filename = "/home/carl/AnghaBench/lz4/lib/extr_lz4frame.c_LZ4F_compressBlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LZ4F_blockIndependent = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*, i32, i32, i32, i32*)* @LZ4F_compressBlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @LZ4F_compressBlock(i8* %0, i8* %1, i8* %2, i32 %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  store i8* %0, i8** %9, align 8
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  %17 = load i32, i32* %14, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %7
  %20 = load i32, i32* %14, align 4
  %21 = sub nsw i32 0, %20
  %22 = add nsw i32 %21, 1
  br label %24

23:                                               ; preds = %7
  br label %24

24:                                               ; preds = %23, %19
  %25 = phi i32 [ %22, %19 ], [ 1, %23 ]
  store i32 %25, i32* %16, align 4
  %26 = load i8*, i8** %9, align 8
  %27 = load i32*, i32** %15, align 8
  %28 = load i32, i32* %14, align 4
  %29 = load i32, i32* @LZ4F_blockIndependent, align 4
  %30 = call i32 @LZ4F_initStream(i8* %26, i32* %27, i32 %28, i32 %29)
  %31 = load i32*, i32** %15, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %33, label %42

33:                                               ; preds = %24
  %34 = load i8*, i8** %9, align 8
  %35 = bitcast i8* %34 to i32*
  %36 = load i8*, i8** %10, align 8
  %37 = load i8*, i8** %11, align 8
  %38 = load i32, i32* %12, align 4
  %39 = load i32, i32* %13, align 4
  %40 = load i32, i32* %16, align 4
  %41 = call i32 @LZ4_compress_fast_continue(i32* %35, i8* %36, i8* %37, i32 %38, i32 %39, i32 %40)
  store i32 %41, i32* %8, align 4
  br label %50

42:                                               ; preds = %24
  %43 = load i8*, i8** %9, align 8
  %44 = load i8*, i8** %10, align 8
  %45 = load i8*, i8** %11, align 8
  %46 = load i32, i32* %12, align 4
  %47 = load i32, i32* %13, align 4
  %48 = load i32, i32* %16, align 4
  %49 = call i32 @LZ4_compress_fast_extState_fastReset(i8* %43, i8* %44, i8* %45, i32 %46, i32 %47, i32 %48)
  store i32 %49, i32* %8, align 4
  br label %50

50:                                               ; preds = %42, %33
  %51 = load i32, i32* %8, align 4
  ret i32 %51
}

declare dso_local i32 @LZ4F_initStream(i8*, i32*, i32, i32) #1

declare dso_local i32 @LZ4_compress_fast_continue(i32*, i8*, i8*, i32, i32, i32) #1

declare dso_local i32 @LZ4_compress_fast_extState_fastReset(i8*, i8*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
